--- a/app/incidents/webapp/manifest.json
+++ b/app/incidents/webapp/manifest.json
@@ -74,17 +74,26 @@
                 {
                     "pattern": ":?query:",
                     "name": "SafetyIncidentsList",
-                    "target": "SafetyIncidentsList"
+                    "target": [
+                        "SafetyIncidentsList"
+                    ]
                 },
                 {
                     "pattern": "SafetyIncidents({key}):?query:",
                     "name": "SafetyIncidentsObjectPage",
-                    "target": "SafetyIncidentsObjectPage"
+                    "target": [
+                        "SafetyIncidentsList",
+                        "SafetyIncidentsObjectPage"
+                    ]
                 },
                 {
                     "pattern": "SafetyIncidents({key})/incidentFlow({key2}):?query:",
                     "name": "ProcessFlowViewPage_incidentFlow",
-                    "target": "ProcessFlowViewPage_incidentFlow"
+                    "target": [
+                        "SafetyIncidentsList",
+                        "SafetyIncidentsObjectPage",
+                        "ProcessFlowViewPage_incidentFlow"
+                    ]
                 }
             ],
             "targets": {
@@ -103,11 +112,20 @@
                                     }
                                 }
                             },
+                            "initialLoad": true,
                             "controlConfiguration": {
-                                "@com.sap.vocabularies.UI.v1.LineItem": {}
+                                "@com.sap.vocabularies.UI.v1.LineItem": {
+                                    "tableSettings": {
+                                        "creationMode": {
+                                            "name": "Inline"
+                                        }
+                                    }
+                                }
                             }
                         }
-                    }
+                    },
+                    "controlAggregation": "beginColumnPages",
+                    "contextPattern": ""
                 },
                 "SafetyIncidentsObjectPage": {
                     "type": "Component",
@@ -140,7 +158,9 @@
                                 }
                             }
                         }
-                    }
+                    },
+                    "controlAggregation": "midColumnPages",
+                    "contextPattern": "/SafetyIncidents({key})"
                 },
                 "ProcessFlowViewPage_incidentFlow": {
                     "viewId": "ProcessFlowView",
@@ -150,13 +170,28 @@
                             "entitySet": "IncidentFlow",
                             "navigation": {}
                         }
-                    }
+                    },
+                    "controlAggregation": "endColumnPages",
+                    "contextPattern": "/SafetyIncidents({key})/incidentFlow({key2})"
                 }
+            },
+            "config": {
+                "flexibleColumnLayout": {
+                    "defaultTwoColumnLayoutType": "TwoColumnsMidExpanded",
+                    "defaultThreeColumnLayoutType": "ThreeColumnsEndExpanded"
+                },
+                "routerClass": "sap.f.routing.Router"
             }
         },
         "contentDensities": {
             "compact": true,
             "cozy": true
+        },
+        "rootView": {
+            "viewName": "sap.fe.templates.RootContainer.view.Fcl",
+            "type": "XML",
+            "async": true,
+            "id": "appRootView"
         }
     },
     "sap.platform.abap": {
