--- a/app/incidents_v4_w_annotations/webapp/manifest.json
+++ b/app/incidents_v4_w_annotations/webapp/manifest.json
@@ -111,7 +111,10 @@
                     "options": {
                         "settings": {
                             "entitySet": "SafetyIncidents",
-                            "navigation": {}
+                            "navigation": {},
+                            "controlConfiguration": {
+                                "ProcessFlowFacet": {}
+                            }
                         }
                     }
                 }
