--- a/app/incidents/webapp/manifest.json
+++ b/app/incidents/webapp/manifest.json
@@ -48,7 +48,7 @@
             "css": []
         },
         "dependencies": {
-            "minUI5Version": "1.80.1",
+            "minUI5Version": "1.82.2",
             "libs": {
                 "sap.fe.templates": {},
                 "sap.ui.fl": {}
@@ -96,6 +96,7 @@
                         "settings": {
                             "entitySet": "SafetyIncidents",
                             "variantManagement": "Page",
+                            "enhanceI18n": "i18n/customIncidentLR.properties",
                             "navigation": {
                                 "SafetyIncidents": {
                                     "detail": {
@@ -103,6 +104,7 @@
                                     }
                                 }
                             },
+                            "initialLoad": true,
                             "controlConfiguration": {
                                 "@com.sap.vocabularies.UI.v1.LineItem": {}
                             }
