--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,23 @@
             "autoAttachChildProcesses": true,
             "console": "integratedTerminal"
           },        
+        {
+            "name": "cds watch",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceFolder}/.vscode/cds",
+            "args": [
+              "watch"
+            ],
+            "skipFiles": [
+              "<node_internals>/**/*.js",
+              "**/cds-reflect/lib/index.js",
+              "**/cds/lib/index.js",
+              "**/.vscode/cds.js"
+            ],
+            "autoAttachChildProcesses": true,
+            "console": "integratedTerminal"
+          },        
     ],
     "compounds": []
 }
